--- a/my-node-server/package.json
+++ b/my-node-server/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "server": "node mongodb.js"
-  },
+ "scripts": {
+  "server": "node mongodb.js",
+  "dev": "nodemon mongodb.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
