--- a/my-node-server/package.json
+++ b/my-node-server/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- "scripts": {
-  "server": "node mongodb.js",
-  "dev": "nodemon mongodb.js"
-},
-
+  "scripts": {
+    "server": "node mongodb.js",
+    "dev": "nodemon mongodb.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,7 +15,8 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
